cppcheck_report.txt
Chapter09/gpio-int/gpio-int.c:34:6: style: The scope of the variable 'ret' can be reduced. [variableScope]
 int ret;
     ^
Chapter12/exec-demo/exec-demo.c:30:7: style: Condition 'wait_for' is always true [knownConditionTrueFalse]
  if (wait_for) {
      ^
Chapter12/exec-demo/exec-demo.c:15:17: note: Assignment 'wait_for=1', assigned value is 1
 int wait_for = 1;
                ^
Chapter12/exec-demo/exec-demo.c:21:11: note: Assuming condition is false
  if (pid == 0) {
          ^
Chapter12/exec-demo/exec-demo.c:30:7: note: Condition 'wait_for' is always true
  if (wait_for) {
      ^
Chapter12/exec-demo/exec-demo.c:19:3: warning: scanf() without field width limits can crash with huge input data. [invalidscanf]
  scanf("%s", command_str);
  ^
Chapter12/exec-demo/exec-demo.c:13:6: style: The scope of the variable 'pid' can be reduced. [variableScope]
 int pid;
     ^
Chapter13/pagefault-demo/pagefault-demo.c:36:2: error: Memory leak: p [memleak]
 return 0;
 ^
Chapter14/mbx-driver-oops/mbx.c:72:6: style: The scope of the variable 'ret' can be reduced. [variableScope]
 int ret;
     ^
nofile:0:0: information: Cppcheck cannot find all the include files (use --check-config for details) [missingInclude]

